--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.7.7",
+    "prisma": "^5.21.1",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@prisma/client": "^5.21.1",
     "fastify": "^5.0.0",
     "zod": "^3.23.8"
   }
