--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "api-rest-nodejs",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "test": "vitest"
+    "test": "vitest ts-node src/vitest.setup.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,12 +16,14 @@
     "@types/supertest": "^6.0.2",
     "prisma": "^5.21.1",
     "supertest": "^7.0.0",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3",
     "vitest": "^2.1.3"
   },
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "dotenv": "^16.4.5",
     "fastify": "^5.0.0",
     "zod": "^3.23.8"
   }
