--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,13 @@
 
   "compilerOptions": {
     "lib": ["es2023"],
-    "module": "node16",
+    "module": "ESNext",
     "target": "es2022",
 
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "moduleResolution": "node16"
-  }
+    "moduleResolution": "Node"
+  },
+  "include": ["src", "**/*.ts", "**/*.tsx", "./vitest.setup.ts"]
 }
